--- a/src/main/resources/templates/renshidanganbiangeng.html
+++ b/src/main/resources/templates/renshidanganbiangeng.html
@@ -92,7 +92,7 @@
 						<div class="form-group">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12 ">变更状态</label>
 							<div class="col-md-6 col-sm-6 col-xs-12" >
-								<select class="form-control" name="changeStatus">
+								<select class="form-control" id="changeStatus" onblur="checkchangestatus()" name="changeStatus">
 									<option value="">请选择</option>
 									<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==chanStatus"
 											 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archive.changeStatus})"
@@ -435,6 +435,13 @@
 			</form>
 		</div>
 		<script>
+            function checkchangestatus() {
+                var changeStatus=$("#changeStatus").val();
+                if(changeStatus==""){
+                    alert("变更状态不能为空！");
+                }
+            }
+
 			function submitClaimVoucher(action){
 				if(!confirm("确定"+action+"档案吗")) return;
 				if (action == '保存'){
