--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -185,43 +185,47 @@
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="name">姓名:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
-						<input type="text" id="name" name="name" value="" class="form-control col-md-7 col-xs-12">
+						<input type="text" id="name" onblur="checkname()" name="name" value="" class="form-control col-md-7 col-xs-12">
 					</div>
+
 				</div>
 			</li>
-			<span style="color:red;" id="names"></span>
+            <span style="color:red;" id="names"></span>
 
 			<li class="lefttop">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">性别:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<select class="form-control" id="gender" onblur="checkgender()" name="gender">
-							<option value="0"> --请选择-- </option>
+							<option value=""> --请选择-- </option>
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==gender"th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 						</select>
-						<span id="sex"></span>
+
 					</div>
 				</div>
 			</li>
+            <span style="color:red;" id="sex"></span>
 			<li class="lefttop"></li>
 			<li class="lefttop">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="email">EMAIL:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" id="email" onblur="checkemail()" name="email" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="emails"></span>
+
 					</div>
 				</div>
 			</li>
+            <span style="color:red;" id="emails"></span>
 			<li class="lefttop">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="phoneNumber">联系电话:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkphoneNumber()" id="phoneNumber" name="phoneNumber" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="phonenumbers"></span>
+
 					</div>
 				</div>
 			</li>
+            <span style="color:red;" id="phonenumbers"></span>
 			<li class="lefttop">
 
 			</li>
@@ -230,19 +234,21 @@
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">身份证号:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkidNumber()" id="idNumber" name="idNumber" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="idnumbers"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="idnumbers" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">户口所在地:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkaccount()" id="account" name="account" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="accounts"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="accounts" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">政治面貌:</label>
@@ -256,25 +262,27 @@
 					</div>
 				</div>
 			</li>
-			<span id="politicals"></span>
+            <span id="politicals" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="school">毕业院校:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkschool()" id="school" name="school" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="schools"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="schools" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="major">专业:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkmajor()" id="major" name="major" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="majors"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="majors" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">学历</label>
@@ -284,10 +292,11 @@
 							<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==education"th:text="${dictionary.dataName}" th:value="${dictionary.id}">
 
 						</select>
-						<span id="educations"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="educations" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">薪酬标准</label>
@@ -300,43 +309,47 @@
 
 					</div>
 				</div>
-			</li><span id="salarystandards"></span>
+			</li><span id="salarystandards" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="bank">开户行:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkbank()" id="bank" name="bank" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="banks"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="banks" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="bankCard">银行卡号:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checkbankCard()" id="bankCard" name="bankCard" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="bankcards"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="bankcards" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="sscNumber">社保卡号:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" onblur="checksscNumber()" id="sscNumber" name="sscNumber" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="sscnumbers"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="sscnumbers" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12" for="registerPerson">登记人:</label>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<input type="text" th:value="${session.userSession.userName}" readonly id="registerPerson" name="registerPerson" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="registerpersons"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="registerpersons" style="color:red;"></span>
 			<li class="leftmiddle">
 				<div class="form-group">
 					<label class="control-label col-md-4 col-sm-4 col-xs-12">建档时间:</label>
@@ -347,7 +360,7 @@
 									<div class="col-md-11 xdisplay_inputx form-group has-feedback">
 										<input type="text" value="" onblur="checksingle_cal2()"
 											   class="form-control has-feedback" id="single_cal2" name="createDate" aria-describedby="inputSuccess2Status2">
-										<span id="text"></span>
+
 									</div>
 								</div>
 							</div>
@@ -356,53 +369,56 @@
 					</div>
 				</div>
 			</li>
+            <span id="createdates" style="color:red;"></span>
 			<li class="leftfooter1">
 				<div class="form-group">
 					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="address">住址:</label>
 					<div class="col-md-10 col-sm-10 col-xs-12">
 						<input type="text" onblur="checkaddress()" id="address" name="address" required="required" class="form-control col-md-7 col-xs-12">
-						<span id="addreesss"></span>
+
 					</div>
 				</div>
 			</li>
+            <span id="addreesss" style="color:red;"></span>
 			<li class="leftfooter">
 				<div class="form-group">
 					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="resumePath">个人履历:</label>
 					<div class="col-md-10 col-sm-10 col-xs-12">
 						<textarea class="form-control" onblur="checkresumePath()" id="resumePath" name="resumePath"></textarea>
-						<span id="resumepaths"></span>
+
 					</div>
 				</div>
+
 				<br/>
-			</li><br/>
+			</li><span id="resumepaths" style="color:red;"></span><br/>
 			<li class="leftfooter">
 				<div class="form-group">
 					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="family">家庭关系:</label>
 					<div class="col-md-10 col-sm-10 col-xs-12">
 						<textarea class="form-control" onblur="checkfamily()" id="family" name="family"></textarea>
-						<span id="familys"></span>
+
 					</div>
 				</div>
-			</li><br/>
+			</li><span id="familys" style="color:red;"></span><br/>
 			<li class="leftfooter">
 				<div class="form-group">
 					<label class="control-label col-md-2 col-sm-2 col-xs-12" for="remark">备注:</label>
 					<div class="col-md-10 col-sm-10 col-xs-12">
 						<textarea class="form-control" onblur="checkremark()" id="remark" name="remark"></textarea>
-						<span id="remarks"></span>
+
 					</div>
 				</div>
 
-			</li><br/>
+			</li><span id="remarks" style="color:red;"></span><br/>
 			<li class="leftfooter1">
 				<div class="form-group">
 					<label class="control-label col-md-2 col-sm-2 col-xs-12">简历附件:</label>
 					<div class="col-md-10 col-sm-10 col-xs-12">
 						<input type="file" name="docFile" value="" onblur="checkannex()" id="annex" required="required" class="form-control col-md-7 col-xs-12" placeholder=".input-xxlarge">
-						<span id="annexs"></span>
+
 					</div>
 				</div>
-			</li>
+			</li><span id="annexs" style="color:red;"></span>
 			<input type="hidden" id="reviewStatus" name="reviewStatus" value=""  class="form-control col-md-7 col-xs-12">
 
 		</ul>
@@ -430,7 +446,7 @@
 
 <script>
 	function submitClaimVoucher(action){
-		if(checkfrom()){
+		if(checkfrom()==true){
 			if(!confirm("确定"+action+"档案吗")) return;
 			if (action == '保存'){
 				document.getElementById("reviewStatus").setAttribute("value",6);
@@ -454,7 +470,48 @@
 <!--js-->
 <script th:src="@{/js/jquery.js}"></script>
 <script type="text/javascript">
-	function checkdep(){
+    function checkresumePath() {
+        var resumePath=$("#resumePath").val();
+        var resumepaths=$("#resumepaths").val();
+        if(resumePath==""){
+            $("#resumepaths").text("非空");
+            return false;
+        }else {
+            $("#resumepaths").text("")
+        }
+    }
+    function checkfamily() {
+        var family=$("#family").val();
+        var familys=$("#familys").val();
+        if(family==""){
+            $("#familys").text("非空");
+            return false;
+        }else {
+            $("#familys").text("")
+        }
+    }
+    function checkremark() {
+        var remark=$("#remark").val();
+        var remarks=$("#remarks").val();
+        if(remark==""){
+            $("#remarks").text("非空");
+            return false;
+        }else {
+            $("#remarks").text("")
+        }
+    }
+    function checkannex() {
+        var annex=$("#annex").val();
+        var annexs=$("#annexs").val();
+        if(annex==""){
+            $("#annexs").text("非空");
+            return false;
+        }else {
+            $("#annexs").text("")
+        }
+    }
+
+    function checkdep(){
 		var depName=$("#depName").val();
 		var depnames=$("#depnames").val();
 		if(depName==""){
@@ -463,6 +520,170 @@
 		}
 
 	}
+    function checkaddress() {
+        var address=$("#address").val();
+        var addreesss=$("#addreesss").val();
+        if(address==""){
+            $("#addreesss").text("非空");
+            return false;
+        }else {
+            $("#addreesss").text("")
+        }
+    }
+    function checksingle_cal2() {
+        var single_cal2=$("#single_cal2").val();
+        var createdates=$("#createdates").val();
+        if(single_cal2==""){
+            $("#createdates").text("非空");
+            return false;
+        }else {
+            $("#createdates").text("")
+        }
+    }
+    function checksscNumber() {
+        var sscNumber=$("#sscNumber").val();
+        var sscnumbers=$("#sscnumbers").val();
+        if(sscNumber==""){
+            $("#sscnumbers").text("非空");
+            return false;
+        }else {
+            $("#sscnumbers").text("")
+        }
+    }
+    function checkbankCard() {
+        var bankCard=$("#bankCard").val();
+        var bankcards=$("#bankcards").val();
+        if(bankCard==""){
+            $("#bankcards").text("非空");
+            return false;
+        }else {
+            $("#bankcards").text("")
+        }
+    }
+    function checkbank() {
+        var bank=$("#bank").val();
+        var banks=$("#banks").val();
+        if(bank==""){
+            $("#banks").text("非空");
+            return false;
+        }else {
+            $("#banks").text("")
+        }
+    }
+    function checksalaryStandard() {
+        var salaryStandard=$("#salaryStandard").val();
+        var salarystandards=$("#salarystandards").val();
+        if(salaryStandard==""){
+            $("#salarystandards").text("非空");
+            return false;
+        }else {
+            $("#salarystandards").text("")
+        }
+    }
+    function checkeducation() {
+        var education=$("#education").val();
+        var educations=$("#educations").val();
+        if(education==""){
+            $("#educations").text("非空");
+            return false;
+        }else {
+            $("#educations").text("")
+        }
+    }
+    function checkmajor(){
+        var major=$("#major").val();
+        var majors=$("#majors").val();
+        if(major==""){
+            $("#majors").text("非空");
+            return false;
+        }else {
+            $("#majors").text("")
+        }
+    }
+    function checkpolitical(){
+        var political=$("#political").val();
+        var politicals=$("#politicals").val();
+        if(political==""){
+            $("#politicals").text("非空");
+            return false;
+        }else {
+            $("#politicals").text("")
+        }
+    }
+    function checkschool(){
+        var school=$("#school").val();
+        var schools=$("#schools").val();
+        if(school==""){
+            $("#schools").text("非空");
+            return false;
+        }else {
+            $("#schools").text("")
+        }
+    }
+    function checkaccount(){
+        var account=$("#account").val();
+        var accounts=$("#accounts").val();
+        if(account==""){
+            $("#accounts").text("非空");
+            return false;
+        }else {
+            $("#accounts").text("")
+        }
+    }
+    function checkidNumber(){
+        var idNumber=$("#idNumber").val();
+        var idnumbers=$("#idnumbers").val();
+        if(idNumber==""){
+            $("#idnumbers").text("非空");
+            return false;
+        }else {
+            $("#idnumbers").text("")
+        }
+    }
+    function checkphoneNumber(){
+        var phoneNumber=$("#phoneNumber").val();
+        var phonenumbers=$("#phonenumbers").val();
+
+        if(phoneNumber==""){
+            $("#phonenumbers").text("非空");
+            return false;
+        }else {
+            $("#phonenumbers").text("")
+        }
+    }
+
+
+    function checkemail(){
+        var email=$("#email").val();
+        var emails=$("#emails").val();
+        if(email==""){
+            $("#emails").text("非空");
+            return false;
+        }else {
+            $("#emails").text("")
+        }
+    }
+    function checkname(){
+        var name=$("#name").val();
+        var names=$("#names").val();
+alert(name);
+        if(name==""){
+            $("#names").text("非空");
+            return false;
+        }else {
+            $("#names").text("");
+        }
+    }
+    function checkgender(){
+        var gender=$("#gender").val();
+        var sex=$("#sex").val();
+        if(gender==""){
+            $("#sex").text("非空");
+            return false;
+        }else {
+            $("#sex").text("")
+        }
+    }
 
 	function checkarch(){
 		var archStatus=$("#archStatus").val();
@@ -506,12 +727,13 @@ function checktitle(){
 }
 function checkfrom(){
 	var flag=true;
-	if(!checkpic()) flag=false;
-	if(!checkarch()) flag=false;
-	if(!checkdep()) flag=false;
-	if(!checkpos()) flag=false;
-	if(!checktitle()) flag=false;
-
+	/*if(!checkpic()) flag=false;if(!checkarch()) flag=false;if(!checkdep()) flag=false;if(!checkpos()) flag=false;if(!checktitle()) flag=false;
+    if(!checkname()) flag=false;if(!checkgender()) flag=false;if(!checkemail()) flag=false;
+    if(!checkphoneNumber()) flag=false;if(!checkidNumber()) flag=false;if(!checkaccount()) flag=false;
+    if(!checkaddress()) flag=false;if(!checkannex()) flag=false;if(!checkbank()) flag=false;if(!checkbankCard()) flag=false;if(!checkeducation()) flag=false;
+    if(!checkfamily())flag=false;if(!checkmajor())flag=false;if(!checkpolitical())flag=false;if(!checkremark())flag=false;
+    if(!checkresumePath())flag=false;if(!checksalaryStandard())flag=false;if(!checksingle_cal2())flag=false;
+    if(!checkschool())flag=false;if(!checksscNumber())flag=false;*/
 
 	return flag;
 }
