更新薪资的部分功能

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -275,7 +275,7 @@
                     <td th:text="${department.getHigherOfficeName()}"></td>
                     <td th:text="${department.getDepName()}"></td>
                     <td th:text="${department.getpNum()}"></td>
-                    <td></td>
+                    <td th:text="${department.getTotalSs()}"></td>
                     <td></td>
                 </tr>
                 </tbody>
